--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 
 ul, ol{
     /* This resets the browsers default and removes the space 
-    reserved for bullets as well as the bullets themselves as
-    'list-style: none; simply hides the bullets but does not 
+    reserved for bullets as well as the bullets themselves.
+    'list-style: none;' simply hides the bullets but does not 
     remove the space */
     margin: 0px;
     padding: 0px;
@@ -15,33 +15,26 @@ ul, ol{
 .title{
     text-align: center;
     font-family: Helvetica, sans-serif;
-    margin: 24px 0px 0px 0px;
+    margin: 32px 0px 24px 0px;
 }
 
-.recipe-list{
-    text-align: center;
-    font-family: Arial, san-serif;
-    list-style: none;
-    width: 70%;
-    margin: 20px auto 0px;
-}
-
-.recipe-list li{
+.recipe-list a{
+    display: block;
     background-color: black;
     text-decoration: none;
     text-align: center;
     font-size: large;
     font-weight: 700;
     font-family: Arial, san-serif;
+    width: 70%;
     margin: 10px auto;
     padding: 25px;
 }
 
-.recipe-list a{
+.recipe-list a:link, .recipe-list a:visited{
     color: white;
-    text-decoration: none;
 }
 
-.recipe-list li:hover{
+.recipe-list a:hover{
     background-color: red;
 }
